# poem-gateway

./: Cargo.toml
config/: etcd.yaml  file.yaml  simple.yaml
docker/: dev.yaml
src/: main.rs
src/api/: mod.rs
src/api/graphql/: input.rs  mod.rs  mutation.rs  query.rs
src/api/openapi/: common_types.rs  consumer.rs  global_plugins.rs  listener.rs  mod.rs  route.rs  service.rs  tags.rs
src/config/: consumer.rs  debounced_stream.rs  listener.rs  mod.rs  plugin.rs  provider.rs  route.rs  service.rs
src/config/providers/: file.rs  mod.rs
src/consumer_filters/: cidr.rs  mod.rs
src/endpoints/: echo.rs  mod.rs  prometheus_exporter.rs  upstream.rs
src/endpoints/load_balancer/: mod.rs  roundrobin.rs
src/endpoints/nodes/: fixed_nodes.rs  health_check.rs  mod.rs
src/listeners/: tcp.rs
src/plugins/: auth_basic.rs  auth_key.rs  circuit_breaker.rs  consumer_restriction.rs  cors.rs  mod.rs  prometheus.rs  request_id.rs  request_validation.rs  response_rewrite.rs
src/plugins/limit_count/: limiter.lua  memory.rs  mod.rs  redis.rs  storage.rs
src/providers/: etcd.rs  file.rs  mod.rs
src/service_targets/: echo.rs  mod.rs  upstream.rs
