[package]
name = "poem-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
async-stream = "0.3.2"
async-trait = "0.1.51"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
cidr = { version = "0.2.1", features = ["serde"] }
dashmap = "4.0.2"
failsafe = "1.1.0"
futures-util = "0.3.17"
lru = "0.7.0"
once_cell = "1.8.0"
parking_lot = "0.11.2"
poem = { version = "1.0.1", features = ["cookie", "websocket", "multipart", "sse", "tls"] }
r2d2 = "0.8.9"
redis = { version = "0.21.2", features = ["tokio-comp", "cluster", "connection-manager"] }
reqwest = { version = "0.11.5", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli", "deflate", "stream"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
structopt = "0.3.23"
tera = "1.12.1"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }
tokio-stream = "0.1.7"
tokio-util = "0.6.8"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
typetag = "0.1.7"
