[package]
name = "poem-gateway"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
async-graphql = "2.10.8"
async-graphql-poem = "2.10.8"
async-stream = "0.3.2"
async-trait = "0.1.51"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
cidr = { version = "0.2.1", features = ["serde"] }
dashmap = "4.0.2"
dyn-clone = "1.0.4"
etcd-client = "0.7.2"
failsafe = "1.1.0"
futures-util = "0.3.17"
hyper = { version = "0.14.14", features = ["http1", "http2", "client"] }
hyper-rustls = { version = "0.22.1", default-features = false, features = ["webpki-tokio"] }
itertools = "0.10.1"
lru = "0.7.0"
parking_lot = "0.11.2"
poem = { version = "1.0.14", features = ["cookie", "websocket", "multipart", "sse", "tls", "prometheus"] }
poem-openapi = "1.0.14"
r2d2 = "0.8.9"
redis = { version = "0.21.3", features = ["tokio-comp", "cluster", "connection-manager"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_urlencoded = "0.7.0"
serde_yaml = "0.8.21"
structopt = "0.3.25"
tera = "=1.12.1"
thiserror = "1.0.30"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "sync", "time", "macros", "fs"] }
tokio-stream = "0.1.7"
tokio-util = "0.6.8"
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
typetag = "0.1.7"
uuid = { version = "0.8.2", features = ["v4"] }
opentelemetry = { version = "0.16.0", features = ["metrics"] }
opentelemetry-prometheus = "0.9.0"
opentelemetry-semantic-conventions = "0.8.0"
once_cell = "1.8.0"
